# NAI_1

./: Ai.cpp  Ai.h  Board.cpp  Board.h  CMakeLists.txt  Config.cpp  Config.h  GameManager.cpp  GameManager.h  Pawn.cpp  Pawn.h  PlayerColor.h  README.md  main.cpp  main.py  movies.csv  randomUser.csv  requirements.txt  testUserData.csv
html/: _ai_8cpp.html  _ai_8cpp.js  _ai_8h.html  _ai_8h.js  _ai_8h_source.html  _board_8cpp.html  _board_8h.html  _board_8h.js  _board_8h_source.html  _config_8cpp.html  _config_8h.html  _config_8h.js  _config_8h_source.html  _game_manager_8cpp.html  _game_manager_8h.html  _game_manager_8h.js  _game_manager_8h_source.html  _pawn_8cpp.html  _pawn_8h.html  _pawn_8h.js  _pawn_8h_source.html  _player_color_8h.html  _player_color_8h.js  _player_color_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_ai-members.html  class_ai.html  class_config-members.html  class_config.html  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  (+18 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  enumvalues_1.js  files_0.js  files_2.js  (+19 more)
latex/: _ai_8h_source.tex  _board_8h_source.tex  _config_8h_source.tex  _game_manager_8h_source.tex  _pawn_8h_source.tex  _player_color_8h_source.tex  annotated.tex  class_ai.tex  class_config.tex  files.tex  refman.tex  struct_board.tex  struct_game_manager.tex  struct_pawn.tex
